# POIS

./: .gitignore  CLAUDE.md  COMPLETE_PROJECT_PROMPT.md  README.md  pyproject.toml  run.sh
.github/agents/: api-agent.agent.md  architect.agent.md  code-explorer.agent.md  coder.agent.md  dependency-manager.agent.md  documenter.agent.md  feature-dev.agent.md  frontend-design.agent.md  lint-agent.agent.md  orchestrator.agent.md  planner.agent.md  qa-lead.agent.md  refactorer.agent.md  reviewer.agent.md  security-auditor.agent.md  tester.agent.md
docs/: overview.md  part-1-foundations.md  part-2-hashing-and-auth.md  part-3-public-key.md  part-4-mpc.md  viva-questions.md
src/: __init__.py  test_comprehensive.py
src/api/: server.py
src/pa01_owf_prg/: __init__.py  owf.py  prg.py  tests.py
src/pa02_prf/: __init__.py  aes_impl.py  prf.py  tests.py
src/pa03_cpa_enc/: __init__.py  cpa_enc.py  tests.py
src/pa04_modes/: __init__.py  modes.py  tests.py
src/pa05_mac/: __init__.py  mac.py  tests.py
src/pa06_cca_enc/: __init__.py  cca_enc.py  tests.py
src/pa07_merkle_damgard/: __init__.py  merkle_damgard.py  tests.py
src/pa08_dlp_hash/: __init__.py  dlp_hash.py  tests.py
src/pa09_birthday_attack/: birthday_attack.py  tests.py
src/pa10_hmac/: hmac_impl.py  tests.py
src/pa11_dh/: dh.py  tests.py
src/pa12_rsa/: rsa.py  tests.py
src/pa13_miller_rabin/: miller_rabin.py  tests.py
src/pa14_crt/: crt.py  tests.py
src/pa15_signatures/: signatures.py  tests.py
src/pa16_elgamal/: elgamal.py  tests.py
web/: index.html  package-lock.json  package.json
(+50 files in other folders)
